[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opencart_integration"
version = "0.1.0"  # __version__ değişkenini dinamik almak için ek bir yöntem gerekir
description = "Opencart Integration with ERPNext"
authors = [
    { name = "Barath Prathosh", email = "barathprathosh@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = []  # requirements.txt içeriğini buraya eklemelisin

[tool.setuptools]
packages = ["opencart_integration"]
